--- a/src/rentalMobil/view/ViewInputDataPeminjam.form
+++ b/src/rentalMobil/view/ViewInputDataPeminjam.form
@@ -79,8 +79,8 @@
                                   <Component id="jScrollPane1" min="-2" pref="296" max="-2" attributes="0"/>
                               </Group>
                               <Group type="102" alignment="0" attributes="0">
-                                  <Component id="labelTelepon" min="-2" pref="65" max="-2" attributes="0"/>
-                                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                                  <Component id="labelTelepon" min="-2" pref="77" max="-2" attributes="0"/>
+                                  <EmptySpace max="-2" attributes="0"/>
                                   <Component id="FormattedTextFieldTelepon" min="-2" pref="227" max="-2" attributes="0"/>
                               </Group>
                           </Group>
@@ -104,7 +104,7 @@
                       </Group>
                       <Component id="jScrollPane2" min="-2" pref="755" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="41" max="32767" attributes="0"/>
+                  <EmptySpace pref="53" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
