--- a/src/rentalMobil/view/ViewInputDataPeminjam.form
+++ b/src/rentalMobil/view/ViewInputDataPeminjam.form
@@ -51,27 +51,6 @@
                       <Group type="102" attributes="0">
                           <EmptySpace min="35" pref="35" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Group type="102" alignment="0" attributes="0">
-                                  <Group type="103" groupAlignment="0" attributes="0">
-                                      <Group type="102" alignment="0" attributes="0">
-                                          <Component id="labelId" min="-2" max="-2" attributes="0"/>
-                                          <EmptySpace min="-2" pref="67" max="-2" attributes="0"/>
-                                      </Group>
-                                      <Group type="102" alignment="1" attributes="0">
-                                          <Component id="labelNama" min="-2" pref="65" max="-2" attributes="0"/>
-                                          <EmptySpace type="separate" max="-2" attributes="0"/>
-                                      </Group>
-                                  </Group>
-                                  <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="formattedTextFieldId" min="-2" pref="91" max="-2" attributes="0"/>
-                                      <Component id="textFieldNama" max="32767" attributes="0"/>
-                                  </Group>
-                              </Group>
-                              <Group type="102" alignment="0" attributes="0">
-                                  <Component id="labelEmail" min="-2" pref="65" max="-2" attributes="0"/>
-                                  <EmptySpace type="separate" max="-2" attributes="0"/>
-                                  <Component id="TextFieldEmail" min="-2" pref="261" max="-2" attributes="0"/>
-                              </Group>
                               <Component id="buttonSearch" alignment="0" min="-2" pref="93" max="-2" attributes="0"/>
                               <Group type="102" alignment="0" attributes="0">
                                   <Component id="labelAlamat" min="-2" pref="65" max="-2" attributes="0"/>
@@ -79,9 +58,17 @@
                                   <Component id="jScrollPane1" min="-2" pref="296" max="-2" attributes="0"/>
                               </Group>
                               <Group type="102" alignment="0" attributes="0">
-                                  <Component id="labelTelepon" min="-2" pref="77" max="-2" attributes="0"/>
+                                  <Group type="103" groupAlignment="0" attributes="0">
+                                      <Component id="labelNama" min="-2" pref="65" max="-2" attributes="0"/>
+                                      <Component id="labelTelepon" min="-2" pref="77" max="-2" attributes="0"/>
+                                      <Component id="labelEmail" min="-2" pref="65" max="-2" attributes="0"/>
+                                  </Group>
                                   <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="FormattedTextFieldTelepon" min="-2" pref="227" max="-2" attributes="0"/>
+                                  <Group type="103" groupAlignment="0" attributes="0">
+                                      <Component id="TextFieldEmail" min="-2" pref="261" max="-2" attributes="0"/>
+                                      <Component id="textFieldTelepon" min="-2" pref="261" max="-2" attributes="0"/>
+                                      <Component id="textFieldNama" max="32767" attributes="0"/>
+                                  </Group>
                               </Group>
                           </Group>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
@@ -126,14 +113,9 @@
                               <Component id="labelNama" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                               <Component id="textFieldNama" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Component id="labelId" min="-2" pref="31" max="-2" attributes="0"/>
-                              <Component id="formattedTextFieldId" max="32767" attributes="0"/>
-                          </Group>
-                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                          <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="FormattedTextFieldTelepon" alignment="3" min="-2" pref="31" max="-2" attributes="0"/>
+                              <Component id="textFieldTelepon" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                               <Component id="labelTelepon" alignment="3" min="-2" pref="31" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
@@ -146,12 +128,12 @@
                               <Component id="jScrollPane1" min="-2" pref="128" max="-2" attributes="0"/>
                               <Component id="labelAlamat" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace max="32767" attributes="0"/>
+                          <EmptySpace min="-2" pref="61" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="buttonDeleted1" alignment="3" min="-2" pref="33" max="-2" attributes="0"/>
                               <Component id="buttonInput" alignment="3" min="-2" pref="33" max="-2" attributes="0"/>
+                              <Component id="buttonDeleted1" alignment="3" min="-2" pref="33" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace min="-2" pref="45" max="-2" attributes="0"/>
+                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                       </Group>
                       <Component id="jScrollPane2" min="-2" pref="443" max="-2" attributes="0"/>
                   </Group>
@@ -170,17 +152,6 @@
               <Color blue="4e" green="16" red="b9" type="rgb"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Telepon"/>
-          </Properties>
-        </Component>
-        <Component class="javax.swing.JLabel" name="labelId">
-          <Properties>
-            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="FZYaoTi" size="18" style="0"/>
-            </Property>
-            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="4e" green="16" red="b9" type="rgb"/>
-            </Property>
-            <Property name="text" type="java.lang.String" value="ID"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="labelNama">
@@ -278,7 +249,7 @@
                 </Property>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                   <Table columnCount="5" rowCount="30">
-                    <Column editable="true" title="Id" type="java.lang.Integer"/>
+                    <Column editable="true" title="Id" type="java.lang.Object"/>
                     <Column editable="true" title="Nama" type="java.lang.String"/>
                     <Column editable="true" title="Telepon" type="java.lang.String"/>
                     <Column editable="true" title="Email" type="java.lang.String"/>
@@ -394,19 +365,6 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="buttonSearch1ActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JFormattedTextField" name="formattedTextFieldId">
-          <Properties>
-            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="c0" green="ef" red="e9" type="rgb"/>
-            </Property>
-            <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
-              <Format subtype="0" type="0"/>
-            </Property>
-          </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="formattedTextFieldIdActionPerformed"/>
-          </Events>
-        </Component>
         <Component class="javax.swing.JButton" name="buttonDeleted1">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
@@ -421,17 +379,14 @@
             </Property>
           </Properties>
         </Component>
-        <Component class="javax.swing.JFormattedTextField" name="FormattedTextFieldTelepon">
+        <Component class="javax.swing.JTextField" name="textFieldTelepon">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="c0" green="ef" red="e9" type="rgb"/>
             </Property>
-            <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
-              <Format format="" subtype="-1" type="0"/>
-            </Property>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="FormattedTextFieldTeleponActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="textFieldTeleponActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
