--- a/src/rentalMobil/view/ViewFromTransaksi.form
+++ b/src/rentalMobil/view/ViewFromTransaksi.form
@@ -107,7 +107,7 @@
                       <Component id="textFieldSearch" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                  <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" attributes="0">
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="labelNama" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
@@ -133,7 +133,6 @@
                               <Component id="buttonInput" alignment="3" min="-2" pref="33" max="-2" attributes="0"/>
                               <Component id="buttonDeleted1" alignment="3" min="-2" pref="33" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                       </Group>
                       <Component id="jScrollPane2" min="-2" pref="443" max="-2" attributes="0"/>
                   </Group>
