--- a/src/rentalMobil/view/ViewFromTransaksi.form
+++ b/src/rentalMobil/view/ViewFromTransaksi.form
@@ -50,7 +50,7 @@
                   <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="1" max="-2" attributes="0">
                       <Group type="102" attributes="0">
-                          <Component id="buttonSearch" min="-2" pref="93" max="-2" attributes="0"/>
+                          <Component id="back" min="-2" pref="93" max="-2" attributes="0"/>
                           <EmptySpace max="32767" attributes="0"/>
                           <Component id="textFieldSearch" min="-2" pref="346" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="61" max="-2" attributes="0"/>
@@ -146,7 +146,7 @@
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="textFieldSearch" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                       <Component id="buttonSearch1" alignment="3" min="-2" pref="31" max="-2" attributes="0"/>
-                      <Component id="buttonSearch" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
+                      <Component id="back" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
                   <Component id="jScrollPane2" min="-2" pref="443" max="-2" attributes="0"/>
@@ -318,7 +318,7 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="textFieldSearchActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JButton" name="buttonSearch">
+        <Component class="javax.swing.JButton" name="back">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="85" green="b6" red="f6" type="rgb"/>
@@ -329,7 +329,8 @@
             <Property name="text" type="java.lang.String" value="BACK"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="buttonSearchActionPerformed"/>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="backMouseClicked"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="backActionPerformed"/>
           </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btnpinjam">
